@@ -1,4 +1,10 @@
-2003-08-04  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>
+2003-08-06  Uwe Pross  <uwe.pross@gmx.net>
+
+	* logo-competition/logos/Greg_Rymer/*: 
+	* logo-competition/logos_new.php: 
+	added logos
+
+2003-08-04  Uwe Pross  <uwe.pross@gmx.net>
 
 	* logo-competition/logos_new.php: 
 	* logo-competition/logos/Phil_Harper/index.php: 
